[Daytrader] Delete unnecessary files